# shuup-product-variations

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
.tx/: config
shuup_product_variations/: .eslintrc.js  .gitignore  __init__.py  apps.py  build_resources.js  models.py  package.json  sections.py  settings.py
shuup_product_variations/admin/: __init__.py  products.py  variation_updater.py  variations.py
shuup_product_variations/admin/views/: organizer.py  product_variations.py  products.py  serializers.py  variations.py  variations_base.py
shuup_product_variations/locale/de/LC_MESSAGES/: django.po  djangojs.po
shuup_product_variations/locale/en/LC_MESSAGES/: django.po  djangojs.po
shuup_product_variations/locale/fi_FI/LC_MESSAGES/: django.po  djangojs.po
shuup_product_variations/locale/sv_SE/LC_MESSAGES/: django.po  djangojs.po
shuup_product_variations/management/commands/: populate_variations.py
shuup_product_variations/migrations/: 0001_initial.py
shuup_product_variations/static_src/: Client.js  Combinations.js  Combinations.jsx  CurrentVariable.jsx  NewVariable.jsx  OrganizerApp.jsx  ProductVariationOrganizer.jsx  ProductVariationsApp.jsx  VariationOrganizer.jsx  VariationSelect.jsx  currentVariable.js  index.js  index.jsx  newVariable.js  productVariationOrganizer.js  utils.js
shuup_product_variations/templates/shuup_product_variations/: organizer.jinja  product_variations.jinja  product_variations_js.jinja
shuup_product_variations_tests/: factories.py  settings.py  test_admin_section.py  test_product_variations.py  test_products.py  test_variations.py  test_views.py
