[metadata]
name = shuup-product-variations
version = 1.0.16
description =
long_description = file: README.md
keywords =

[options]
include_package_data = True
packages = find:
install_requires =
    shuup
    shuup-api
    shuup-rest-api

[options.entry_points]
shuup.addon = shuup_product_variations = shuup_product_variations

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_product_variations_tests.settings
django_find_project = false
norecursedirs = node_modules .git

[flake8]
exclude = dist,build,migrations,docs
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
include_trailing_comma=true
line_length=120
known_first_party=shuup_product_variations*
multi_line_output=3
use_parentheses=true
combine_as_imports=true
